--- a/admin/css/estilo.css
+++ b/admin/css/estilo.css
@@ -138,82 +138,36 @@ main {
     margin-bottom: 0;
 }
 
-
-
-/* ##### Formulario Exercicio ###### */
-.table-primary {
-    font-size: 50px;
-}
-
-
-.tituloexercicio{
-
-    text-align: center;
-}
-
-h3 {
-    text-align: center;
+/* ##### Formulario Contato Lista ###### */
+.thcontato{
+    font: 1.6em Arial;
     font-weight: bold;
-    padding-top: 15px;
+    
 }
 
-
-.col-md-12 {
-    width: 100%;
-    padding: 80px 80px;
+.tdcontato {
+    font: 1.3em Helvetica;
+    font-weight: bold;
+    
 }
 
-.card-header {
-    background-color: yellow;
-    width: 100%;
-}
-
-.card-body {
-    /* background-color: aqua; */
-    justify-content: space-evenly;
-    width: 100%;
-}
-
-.form-control {
-    padding: 0;
-    width: 100%;
-}
-
-.form-select {
-    margin: 15px 0;
-}
-
-.form-check {
-    padding: 30px;
-}
-
-label {
+/* ##### Formulario Aluno Lista ###### */
+.thAluno {
+    font: 1.6em Arial;
     font-weight: bold;
 }
 
-textarea {
-    resize: none;
+.tdAluno {
+    font: 1.3em Helvetica;
+    font-weight: bold;
 }
-
-.img-dashboard{
+.fotodados{
     width: 100%;
+    height: 100%;
 }
-
-
-.img-dashboard img{
-    display: block;
-    clear: both;
-    width: 300px;
-    height: 320px;
-    object-fit: cover;
-
-}
-
-
-
-
-.col-form-label {
-    padding: 10px 10px;
+.fotodados img {
+    max-width: 300px;
+    max-height: 320px;
 }
 
 /*##### Formulario Aluno Cadastro #######*/
@@ -286,7 +240,37 @@ form {
     padding: 15px;
 
 }
-/* Formulario de Cadastro de Funcionários */
+
+
+/* Formulario lista de Funcionários */
+
+.thFuncionario {
+    font: 1.6em Arial;
+    font-weight: bold;
+
+}
+
+.tdFuncionario {
+    font: 1.3em Helvetica;
+    font-weight: bold;
+
+}
+
+.fotofunc {
+    width: 100%;
+    height: 100%;
+}
+
+.fotofunc img {
+    width: 300px;
+    height: 320px;
+}
+
+
+
+
+
+/* Formulario de Cadastro e de Atualização Funcionários */
 .h1func{
     text-align: center;
     background: #ffc500;
