--- a/admin/css/estilo.css
+++ b/admin/css/estilo.css
@@ -138,9 +138,34 @@ main {
     margin-bottom: 0;
 }
 
+
+
+/* ##### Formulario Exercicio Lista ###### */
+.fotoexer{
+    width: 100%;
+}
+.fotoexer img {
+    max-width: 300px;
+    max-height: 320px;
+    object-fit: cover;
+}
+td, th {
+    text-align: center;
+    
+}
+
+th {
+    font-size: 1.0em;
+    font-weight: bold;
+}
+
+
+
 /* ##### Formulario Contato Lista ###### */
+
+
 .thcontato{
-    font: 1.6em Arial;
+    font: 1.0em Arial;
     font-weight: bold;
     
 }
@@ -152,22 +177,14 @@ main {
 }
 
 /* ##### Formulario Aluno Lista ###### */
-.thAluno {
-    font: 1.6em Arial;
-    font-weight: bold;
-}
-
-.tdAluno {
-    font: 1.3em Helvetica;
-    font-weight: bold;
-}
-.fotodados{
+.fotoalunos{
     width: 100%;
-    height: 100%;
+    
 }
-.fotodados img {
+.fotoalunos img {
     max-width: 300px;
     max-height: 320px;
+    object-fit: cover;
 }
 
 /*##### Formulario Aluno Cadastro #######*/
@@ -244,17 +261,7 @@ form {
 
 /* Formulario lista de Funcionários */
 
-.thFuncionario {
-    font: 1.6em Arial;
-    font-weight: bold;
 
-}
-
-.tdFuncionario {
-    font: 1.3em Helvetica;
-    font-weight: bold;
-
-}
 
 .fotofunc {
     width: 100%;
@@ -264,6 +271,7 @@ form {
 .fotofunc img {
     width: 300px;
     height: 320px;
+    object-fit: cover;
 }
 
 
