--- a/admin/css/estilo.css
+++ b/admin/css/estilo.css
@@ -311,7 +311,7 @@ form {
     margin-top: 10px;
 }
 
-/* Formulario Matricula Cadastro estilização também foi usada no formulario treino do cadastro */
+/* Formulario Matricula Cadastro e Atualização estilização também foi usada no formulario Treino do Cadastro e Atualização */
 
 .formContainer {
     width: 100%;
