--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,6 +82,7 @@ header div h1 {
     text-indent: -9999px;
 }
 
+
 .menu {
     display: flex;
     justify-content: space-between;
@@ -131,12 +132,13 @@ header div h1 {
     font-size: 1.2em;
 }
 
-.menu button {
+.menu .btnlogin {
     background: url(../img/btnLogin.png) no-repeat;
     background-size: cover;
     text-indent: -9999px;
     border: 0;
-    padding: 20px 28px;
+    padding: 21px 28px;
+    width: 36%;
 }
 
 /* MENU FIXO */
@@ -863,3 +865,40 @@ padding: 50px 0;
     background: #34495e;
     color: #f1c40f;
 }
+
+/* modal do meu login */
+
+
+.modal {
+    text-align: center;
+}
+
+
+.btn-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+   
+}
+
+.modal-content{ 
+   background:#34495e;
+}
+.modal-header{
+    background: #48c9b0;
+    width: 100%;   
+    display: flex;  
+    flex-direction: column;    
+}
+
+
+
+  .login-usuario-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .labelsen{
+    margin-right: 10px;
+  }
+  
