--- a/css/estilo.css
+++ b/css/estilo.css
@@ -891,7 +891,7 @@ padding: 50px 0;
    background:#34495e;
 }
 .modal-header{
-    background: #48c9b0;
+    background: #ffffff;
     width: 100%;   
     display: flex;  
     flex-direction: column;    
