--- a/css/estilo.css
+++ b/css/estilo.css
@@ -876,6 +876,7 @@ padding: 50px 0;
 
 .modal {
     text-align: center;
+    
 }
 
 
@@ -894,17 +895,19 @@ padding: 50px 0;
     -webkit-text-stroke: 1px black; /* Adiciona uma borda preta ao texto para navegadores baseados em Webkit (como Chrome e Safari) */
     text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black; /* Adiciona uma borda preta ao texto para outros navegadores */
 }
-.modal-content{ 
-   background:#34495e;
+.modal-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 750px; /* Adapte o máximo de largura conforme necessário */
 }
-.modal-header{
-    background: #ffffff;
-    width: 100%;   
-    display: flex;  
-    flex-direction: column;    
-    border: 0;
-    margin-bottom: 30px;
-}
+
+/* Se desejar ajustar ainda mais a aparência do modal, pode adicionar estilos adicionais aqui */
+
+
 .col-form-label{
     color:#f1c40f;
     margin-right: 2px;
