--- a/admin/css/estilo.css
+++ b/admin/css/estilo.css
@@ -36,8 +36,15 @@ body {
     width: 15%;
 }
 
-.topo h1 img {
-    width: 70%;
+
+.identUser{
+    width: 100%;
+}
+.identUser img{
+    max-width: 100px;
+    max-height: 90px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .topo h2 {
