--- a/admin/css/estilo.css
+++ b/admin/css/estilo.css
@@ -56,8 +56,10 @@ body {
 
 .topo div {
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 15%;
+    
 }
 
 .topo div img {
